--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0275.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0275.html
@@ -678,7 +678,7 @@
         </span>
         <span id="w_130_0" class="ocr_word" title="bbox 444 894 524 950">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_130_1" class="ocr_word" title="bbox 444 894 524 950">
@@ -753,9 +753,14 @@
             <ins class="alt" title="nlp 1.00">ὁμωνύμως</ins>
           </span>
         </span>
-        <span id="w_145" class="ocr_word" title="bbox 868 979 1181 1019" lang="grc">
+        <span id="w_145_0" class="ocr_word" title="bbox 868 979 1181 1019">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγοροῦνται.</ins>
+            <ins class="alt" title="nlp 2.00">καταηγοροῦνται.</ins>
+          </span>
+        </span>
+        <span id="w_145_1" class="ocr_word" title="bbox 868 979 1181 1019">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1226 980 1265 1004" lang="grc">
@@ -776,11 +781,6 @@
         <span id="w_149" class="ocr_word" title="bbox 1518 982 1771 1021" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑτερωνύμως</ins>
-          </span>
-        </span>
-        <span id="w_150" class="ocr_word" title="bbox 1793 970 1881 1007">
-          <span class="alternatives">
-            <ins title="nlp 2.00">280r</ins>
           </span>
         </span>
       </span>
@@ -1093,9 +1093,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 137 1578 1813 1634">
-        <span id="w_211" class="ocr_word" title="bbox 137 1580 201 1620" lang="grc">
+        <span id="w_211_0" class="ocr_word" title="bbox 137 1580 201 1620">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_211_1" class="ocr_word" title="bbox 137 1580 201 1620">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 233 1579 389 1633" lang="grc">
@@ -1103,9 +1108,14 @@
             <ins class="alt" title="nlp 1.00">θερμόν,</ins>
           </span>
         </span>
-        <span id="w_213" class="ocr_word" title="bbox 422 1581 483 1620" lang="grc">
+        <span id="w_213_0" class="ocr_word" title="bbox 422 1581 483 1620">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_213_1" class="ocr_word" title="bbox 422 1581 483 1620">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 517 1595 556 1619" lang="grc">
@@ -1141,16 +1151,6 @@
         <span id="w_220" class="ocr_word" title="bbox 1310 1593 1530 1633" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δικαιοσύνη</ins>
-          </span>
-        </span>
-        <span id="w_221" class="ocr_word" title="bbox 1569 1582 1618 1633" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῇ</ins>
-          </span>
-        </span>
-        <span id="w_222" class="ocr_word" title="bbox 1652 1580 1813 1634" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀδικίᾳ),</ins>
           </span>
         </span>
       </span>
@@ -2054,7 +2054,7 @@
         </span>
         <span id="w_397_0" class="ocr_word" title="bbox 1684 2649 1755 2688">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_397_1" class="ocr_word" title="bbox 1684 2649 1755 2688">
@@ -2251,7 +2251,7 @@
         </span>
         <span id="w_436_0" class="ocr_word" title="bbox 1412 2825 1534 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">151,13—156,13</ins>
+            <ins class="alt" title="nlp 2.00">—156,13</ins>
           </span>
         </span>
         <span id="w_436_1" class="ocr_word" title="bbox 1412 2825 1534 2863">
@@ -2321,9 +2321,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 68 2940 1833 2986">
-        <span id="w_449" class="ocr_word" title="bbox 68 2952 152 2974">
+        <span id="w_449_0" class="ocr_word" title="bbox 68 2952 152 2974">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατὰ</ins>
+            <ins class="alt" title="nlp 2.00">κατὰ</ins>
+          </span>
+        </span>
+        <span id="w_449_1" class="ocr_word" title="bbox 68 2952 152 2974">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_450" class="ocr_word" title="bbox 176 2942 214 2975" lang="grc">
@@ -2394,11 +2399,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_463" class="ocr_word" title="bbox 1808 2940 1833 2971" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
           </span>
         </span>
       </span>
@@ -2507,13 +2507,7 @@
         </span>
         <span id="w_483" class="ocr_word" title="bbox 528 3062 594 3102">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xoj]</ins>
-            <del title="nlp 0.90">xoj</del>
-          </span>
-        </span>
-        <span id="w_484" class="ocr_word" title="bbox 620 3061 657 3094">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τῷ]</ins>
+            <ins title="nlp 2.00">τῷ] τὸ</ins>
           </span>
         </span>
         <span id="w_485" class="ocr_word" title="bbox 683 3061 707 3093">
