--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0309.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0309.html
@@ -1124,7 +1124,7 @@
       <span class="ocr_line" title="bbox 59 3136 456 3186">
         <span id="w_202" class="ocr_word" title="bbox 59 3136 302 3186">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἰσοστροφή</ins>
+            <ins title="nlp 2.00">ἰσοστροφή</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 330 3141 456 3183">
@@ -1369,7 +1369,7 @@
         </span>
         <span id="w_247" class="ocr_word" title="bbox 1743 1145 1879 1179" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">]καθολικώτερος</ins>
+            <ins title="nlp 2.00">καθολικώτερος</ins>
           </span>
         </span>
       </span>
@@ -2097,7 +2097,7 @@
       <span class="ocr_line" title="bbox 1078 2664 1878 2711">
         <span id="w_381" class="ocr_word" title="bbox 1078 2669 1116 2704" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">19 κἄν τε . . . κἄν τε 82,5.6 899,28 110,7.8</ins>
+            <ins title="nlp 2.00">κἄν τε . . . κἄν τε 82,5.6 899,28 110,7.8</ins>
           </span>
         </span>
       </span>
