--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0310.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0310.html
@@ -1812,7 +1812,7 @@
       <span class="ocr_line" title="bbox 1298 1957 1818 2003">
         <span id="w_331" class="ocr_word" title="bbox 1298 1960 1315 1977" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*κοινώνυμος 202,27.33</ins>
+            <ins title="nlp 2.00">κοινώνυμος 202,27.33</ins>
           </span>
         </span>
       </span>
