--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0414.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0414.html
@@ -140,7 +140,7 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1074 359 1215 411" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1245 374 1314 412" lang="grc">
@@ -351,7 +351,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 897 565 1037 619" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1067 582 1139 620" lang="grc">
@@ -535,16 +535,11 @@
         </span>
         <span id="w_101" class="ocr_word" title="bbox 2019 706 2114 760" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σχῆ.</ins>
+            <ins title="nlp 2.00">σχήματα·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 430 773 2113 828">
-        <span id="w_102" class="ocr_word" title="bbox 430 788 550 824" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μάτα·</ins>
-          </span>
-        </span>
         <span id="w_103" class="ocr_word" title="bbox 575 789 637 813" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -587,7 +582,7 @@
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1542 773 1653 826" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
+            <ins title="nlp 2.00">(οὐδὲ</ins>
           </span>
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1670 789 1741 828" lang="grc">
@@ -2132,7 +2127,7 @@
         </span>
         <span id="w_412" class="ocr_word" title="bbox 1551 2676 1580 2709" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γ’</ins>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_413" class="ocr_word" title="bbox 1773 2689 1947 2710" lang="grc">
