--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0454.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0454.html
@@ -862,9 +862,14 @@
             <ins class="alt" title="nlp 1.00">ὢν</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 690 1064 890 1117" lang="grc">
+        <span id="w_165_0" class="ocr_word" title="bbox 690 1064 890 1117">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαρεῖται</ins>
+            <ins class="alt" title="nlp 2.00">διαιρεῖται</ins>
+          </span>
+        </span>
+        <span id="w_165_1" class="ocr_word" title="bbox 690 1064 890 1117">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 928 1079 982 1107" lang="grc">
@@ -900,11 +905,6 @@
         <span id="w_172" class="ocr_word" title="bbox 1811 1077 1864 1106" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_173" class="ocr_word" title="bbox 1895 1061 2106 1116" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Σωκράτην</ins>
           </span>
         </span>
       </span>
@@ -2711,9 +2711,9 @@
             <ins class="alt" title="nlp 1.00">ὁμοίως</ins>
           </span>
         </span>
-        <span id="w_520" class="ocr_word" title="bbox 2115 2857 2169 2890">
+        <span id="w_520_0" class="ocr_word" title="bbox 2115 2857 2169 2890">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -3159,15 +3159,14 @@
             <del title="nlp 0.90">add.</del>
           </span>
         </span>
-        <span id="w_601" class="ocr_word" title="bbox 1799 3213 1856 3245" lang="grc">
+        <span id="w_601_0" class="ocr_word" title="bbox 1799 3213 1856 3245">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_602" class="ocr_word" title="bbox 1883 3210 1914 3243">
+        <span id="w_601_1" class="ocr_word" title="bbox 1799 3213 1856 3245">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
