--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0372.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0372.html
@@ -492,7 +492,7 @@
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1504 657 1647 710" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντα</ins>
+            <ins title="nlp 2.00">(πάντα</ins>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1685 672 1754 711" lang="grc">
@@ -1154,7 +1154,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 1863 1423 1971 1478" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περὶ</ins>
+            <ins title="nlp 2.00">(περὶ</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 2001 1426 2121 1464" lang="grc">
