--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0274.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0274.html
@@ -88,7 +88,7 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 984 171 1112 225" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(θέσιν</ins>
+            <ins title="nlp 2.00">θέσιν</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1134 172 1204 225" lang="grc">
@@ -242,7 +242,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1427 310 1556 364" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ποιὸς</ins>
+            <ins title="nlp 2.00">ποιὸς</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1586 309 1658 364" lang="grc">
@@ -322,14 +322,14 @@
             <ins title="nlp 2.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 1807 395 1951 435" lang="grc">
+        <span id="w_60_0" class="ocr_word" title="bbox 1807 395 1951 435">
           <span class="alternatives">
-            <ins title="nlp 2.00">χοῦψος</ins>
+            <ins class="alt" title="nlp 2.00">καῦφος</ins>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 1981 380 2077 421" lang="grc">
+        <span id="w_60_1" class="ocr_word" title="bbox 1807 395 1951 435">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -416,9 +416,14 @@
             <ins class="alt" title="nlp 1.00">ἐστιν</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 522 536 796 567" lang="grc">
+        <span id="w_78_0" class="ocr_word" title="bbox 522 536 796 567">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνιχείμενον,</ins>
+            <ins class="alt" title="nlp 2.00">ἀντικείμενον,</ins>
+          </span>
+        </span>
+        <span id="w_78_1" class="ocr_word" title="bbox 522 536 796 567">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 830 519 849 560" lang="grc">
@@ -471,11 +476,6 @@
             <ins class="alt" title="nlp 1.00">ἑνὶ</ins>
           </span>
         </span>
-        <span id="w_89" class="ocr_word" title="bbox 1981 518 2064 560" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 392 589 2073 644">
         <span id="w_90" class="ocr_word" title="bbox 392 607 430 631" lang="grc">
@@ -488,9 +488,14 @@
             <ins class="alt" title="nlp 1.00">πλείοσιν</ins>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 657 590 922 630" lang="grc">
+        <span id="w_92_0" class="ocr_word" title="bbox 657 590 922 630">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑποχειμένοις</ins>
+            <ins class="alt" title="nlp 2.00">ὑξποκειμένοις</ins>
+          </span>
+        </span>
+        <span id="w_92_1" class="ocr_word" title="bbox 657 590 922 630">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 945 589 1151 642" lang="grc">
@@ -531,11 +536,6 @@
         <span id="w_100" class="ocr_word" title="bbox 1826 605 1896 629" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κἄν</ins>
-          </span>
-        </span>
-        <span id="w_101" class="ocr_word" title="bbox 1929 603 2073 644" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φυσικὰ</ins>
           </span>
         </span>
       </span>
@@ -674,9 +674,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_128" class="ocr_word" title="bbox 389 814 632 845" lang="grc">
+        <span id="w_128_0" class="ocr_word" title="bbox 389 814 632 845">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑποχειμένῳ</ins>
+            <ins class="alt" title="nlp 2.00">ὑποκειμένῳ</ins>
+          </span>
+        </span>
+        <span id="w_128_1" class="ocr_word" title="bbox 389 814 632 845">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 665 796 749 837" lang="grc">
@@ -712,11 +717,6 @@
         <span id="w_135" class="ocr_word" title="bbox 1413 799 1563 851" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγεται</ins>
-          </span>
-        </span>
-        <span id="w_136" class="ocr_word" title="bbox 1596 797 1767 852" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποιότης.</ins>
           </span>
         </span>
       </span>
@@ -972,9 +972,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 389 1344 2074 1399">
-        <span id="w_186" class="ocr_word" title="bbox 389 1361 675 1399" lang="grc">
+        <span id="w_186_0" class="ocr_word" title="bbox 389 1361 675 1399">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐνδειχνύμενος</ins>
+            <ins class="alt" title="nlp 2.00">ἐνδεικνύμενος</ins>
+          </span>
+        </span>
+        <span id="w_186_1" class="ocr_word" title="bbox 389 1361 675 1399">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 715 1361 772 1385" lang="grc">
@@ -1030,11 +1035,6 @@
         <span id="w_197" class="ocr_word" title="bbox 1761 1345 1917 1384" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δύναται</ins>
-          </span>
-        </span>
-        <span id="w_198" class="ocr_word" title="bbox 1954 1361 2074 1385" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
           </span>
         </span>
       </span>
@@ -1823,9 +1823,9 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_353" class="ocr_word" title="bbox 1994 2250 2077 2288" lang="grc">
+        <span id="w_353_0" class="ocr_word" title="bbox 1994 2250 2077 2288">
           <span class="alternatives">
-            <ins title="nlp 2.00">λευχότητος</ins>
+            <ins class="alt" title="nlp 2.00">λευκότητος</ins>
           </span>
         </span>
       </span>
@@ -2073,9 +2073,9 @@
             <ins class="alt" title="nlp 1.00">ποιότης</ins>
           </span>
         </span>
-        <span id="w_402" class="ocr_word" title="bbox 1965 2609 2076 2646" lang="grc">
+        <span id="w_402_0" class="ocr_word" title="bbox 1965 2609 2076 2646">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορεῖται</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορεῖται</ins>
           </span>
         </span>
       </span>
