--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0415.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0415.html
@@ -2574,9 +2574,14 @@
             <ins title="nlp 2.00">ἄλλοτε</ins>
           </span>
         </span>
-        <span id="w_490" class="ocr_word" title="bbox 253 3151 317 3183">
+        <span id="w_490_0" class="ocr_word" title="bbox 253 3151 317 3183">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 1:</ins>
+            <ins class="alt" title="nlp 2.00">V1:</ins>
+          </span>
+        </span>
+        <span id="w_490_1" class="ocr_word" title="bbox 253 3151 317 3183">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_491" class="ocr_word" title="bbox 352 3150 424 3184" lang="grc">
@@ -2594,9 +2599,14 @@
             <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
-        <span id="w_494" class="ocr_word" title="bbox 621 3152 664 3184">
+        <span id="w_494_0" class="ocr_word" title="bbox 621 3152 664 3184">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_494_1" class="ocr_word" title="bbox 621 3152 664 3184">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_495" class="ocr_word" title="bbox 863 3148 918 3182">
@@ -2633,16 +2643,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">T</ins>
             <del title="nlp 0.90">T</del>
-          </span>
-        </span>
-        <span id="w_502" class="ocr_word" title="bbox 1757 3138 1800 3172">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">32</ins>
-          </span>
-        </span>
-        <span id="w_503" class="ocr_word" title="bbox 1832 3149 1928 3182" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γινώσκεται</ins>
           </span>
         </span>
       </span>
