--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0311.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0311.html
@@ -577,14 +577,14 @@
             <ins title="nlp 2.00">λέων</ins>
           </span>
         </span>
-        <span id="w_100" class="ocr_word" title="bbox 183 1863 354 1909" lang="grc">
+        <span id="w_100_0" class="ocr_word" title="bbox 183 1863 354 1909">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀνδρεῖος)</ins>
+            <ins class="alt" title="nlp 2.00">(ἀνδρεῖος)</ins>
           </span>
         </span>
-        <span id="w_101" class="ocr_word" title="bbox 381 1863 455 1906">
+        <span id="w_100_1" class="ocr_word" title="bbox 183 1863 354 1909">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20,1</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -828,9 +828,14 @@
             <ins title="nlp 2.00">λογική</ins>
           </span>
         </span>
-        <span id="w_146" class="ocr_word" title="bbox 254 2451 406 2496" lang="grc">
+        <span id="w_146_0" class="ocr_word" title="bbox 254 2451 406 2496">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὄργανον</ins>
+            <ins class="alt" title="nlp 2.00">(ὄργανον</ins>
+          </span>
+        </span>
+        <span id="w_146_1" class="ocr_word" title="bbox 254 2451 406 2496">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 457 2463 516 2495" lang="grc">
@@ -841,11 +846,6 @@
         <span id="w_148" class="ocr_word" title="bbox 565 2449 773 2494" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλοσοφίας)</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 822 2448 925 2490">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">26,37</ins>
           </span>
         </span>
       </span>
@@ -1951,9 +1951,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 995 2269 1577 2317">
-        <span id="w_353" class="ocr_word" title="bbox 995 2271 1203 2317" lang="grc">
+        <span id="w_353_0" class="ocr_word" title="bbox 995 2271 1203 2317">
           <span class="alternatives">
-            <ins title="nlp 2.00">*μεγάλος</ins>
+            <ins class="alt" title="nlp 2.00">*μεγάλος</ins>
+          </span>
+        </span>
+        <span id="w_353_1" class="ocr_word" title="bbox 995 2271 1203 2317">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1229 2273 1308 2313">
@@ -1966,11 +1971,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ficta)</ins>
             <del title="nlp 0.90">ficta</del>
-          </span>
-        </span>
-        <span id="w_356" class="ocr_word" title="bbox 1454 2269 1577 2309">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">211,31</ins>
           </span>
         </span>
       </span>
