--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0273.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0273.html
@@ -210,7 +210,7 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 759 454 911 510" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὥσπερ</ins>
+            <ins title="nlp 2.00">ὥσπερ</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 942 472 1012 510" lang="grc">
@@ -1089,7 +1089,7 @@
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1161 1550 1312 1606" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(σχέσιν</ins>
+            <ins title="nlp 2.00">σχέσιν</ins>
           </span>
         </span>
         <span id="w_209" class="ocr_word" title="bbox 1344 1553 1414 1606" lang="grc">
@@ -1871,9 +1871,14 @@
             <ins class="alt" title="nlp 1.00">ὅλου</ins>
           </span>
         </span>
-        <span id="w_362" class="ocr_word" title="bbox 905 2391 974 2415" lang="grc">
+        <span id="w_362_0" class="ocr_word" title="bbox 905 2391 974 2415">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαραχτῆρα</ins>
+            <ins class="alt" title="nlp 2.00">χαρακτῆρα</ins>
+          </span>
+        </span>
+        <span id="w_362_1" class="ocr_word" title="bbox 905 2391 974 2415">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_363" class="ocr_word" title="bbox 1267 2378 1460 2431" lang="grc">
@@ -1889,11 +1894,6 @@
         <span id="w_365" class="ocr_word" title="bbox 1604 2393 1672 2430" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_366" class="ocr_word" title="bbox 1702 2377 1804 2418" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ποιότητα</ins>
           </span>
         </span>
       </span>
@@ -2324,9 +2324,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 67 2946 1713 2997">
-        <span id="w_448" class="ocr_word" title="bbox 67 2946 120 2978">
+        <span id="w_448_0" class="ocr_word" title="bbox 67 2946 120 2978">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_448_1" class="ocr_word" title="bbox 67 2946 120 2978">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_449" class="ocr_word" title="bbox 146 2951 210 2979">
@@ -2393,11 +2398,6 @@
         <span id="w_461" class="ocr_word" title="bbox 1521 2951 1645 2985" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πλείονι</ins>
-          </span>
-        </span>
-        <span id="w_462" class="ocr_word" title="bbox 1670 2952 1713 2984">
-          <span class="alternatives">
-            <ins title="nlp 2.00">H1</ins>
           </span>
         </span>
       </span>
