--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0312.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0312.html
@@ -19,7 +19,7 @@
       <span class="ocr_line" title="bbox 592 135 689 176">
         <span id="w_1" class="ocr_word" title="bbox 592 135 689 176">
           <span class="alternatives">
-            <ins title="nlp 2.00">(??)έλος</ins>
+            <ins title="nlp 2.00">έλος</ins>
           </span>
         </span>
       </span>
@@ -1012,7 +1012,7 @@
       <span class="ocr_line" title="bbox 371 2651 1178 2701">
         <span id="w_179" class="ocr_word" title="bbox 371 2655 544 2701" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*μητρὶς</ins>
+            <ins title="nlp 2.00">μητρὶς</ins>
           </span>
         </span>
         <span id="w_180" class="ocr_word" title="bbox 570 2666 633 2687" lang="grc">
@@ -1395,7 +1395,7 @@
       <span class="ocr_line" title="bbox 1304 822 1794 868">
         <span id="w_248" class="ocr_word" title="bbox 1304 824 1571 868" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*μονόμεσος</ins>
+            <ins title="nlp 2.00">μονόμεσος</ins>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1597 822 1794 866">
@@ -1710,7 +1710,7 @@
       <span class="ocr_line" title="bbox 1308 1648 1956 1695">
         <span id="w_307" class="ocr_word" title="bbox 1308 1653 1486 1695" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*μουσικότης (οὐ λέγεται) 8,23</ins>
+            <ins title="nlp 2.00">μουσικότης (οὐ λέγεται) 8,23</ins>
           </span>
         </span>
       </span>
