--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0416.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0416.html
@@ -1430,7 +1430,7 @@
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1104 2212 1237 2266" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1276 2226 1317 2252" lang="grc">
@@ -1497,7 +1497,7 @@
         </span>
         <span id="w_288" class="ocr_word" title="bbox 1161 2281 1245 2334" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1276 2297 1388 2321" lang="grc">
@@ -1641,7 +1641,7 @@
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1489 2419 1571 2473" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1604 2434 1716 2459" lang="grc">
@@ -2363,9 +2363,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_453" class="ocr_word" title="bbox 992 3153 1035 3183">
+        <span id="w_453_0" class="ocr_word" title="bbox 992 3153 1035 3183">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_453_1" class="ocr_word" title="bbox 992 3153 1035 3183">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_454" class="ocr_word" title="bbox 1157 3153 1197 3185">
@@ -2407,12 +2412,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_462" class="ocr_word" title="bbox 2084 3151 2110 3184">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
