--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0455.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0455.html
@@ -234,7 +234,7 @@
         </span>
         <span id="w_43" class="ocr_word" title="bbox 1270 368 1355 422" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1385 383 1456 422" lang="grc">
@@ -802,7 +802,7 @@
         </span>
         <span id="w_153_1" class="ocr_word" title="bbox 1602 987 1752 1036">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins title="nlp 2.00">καὶ </ins>
           </span>
         </span>
       </span>
@@ -862,9 +862,9 @@
             <ins title="nlp 2.00">διαφορὰ</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1697 1053 1846 1092" lang="grc">
+        <span id="w_165_0" class="ocr_word" title="bbox 1697 1053 1846 1092">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθολιχωιτέρα</ins>
+            <ins class="alt" title="nlp 2.00">καθολικωτέρα</ins>
           </span>
         </span>
       </span>
@@ -914,9 +914,9 @@
             <ins class="alt" title="nlp 1.00">ἀνθρώπου</ins>
           </span>
         </span>
-        <span id="w_176" class="ocr_word" title="bbox 1540 1121 1847 1174" lang="grc">
+        <span id="w_176_0" class="ocr_word" title="bbox 1540 1121 1847 1174">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθολιχώτερόν</ins>
+            <ins class="alt" title="nlp 2.00">καθολικώτερόν</ins>
           </span>
         </span>
       </span>
@@ -1199,9 +1199,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_231" class="ocr_word" title="bbox 797 1475 1100 1529" lang="grc">
+        <span id="w_231_0" class="ocr_word" title="bbox 797 1475 1100 1529">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηχότος,</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκότος,</ins>
+          </span>
+        </span>
+        <span id="w_231_1" class="ocr_word" title="bbox 797 1475 1100 1529">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_232" class="ocr_word" title="bbox 1133 1487 1264 1524" lang="grc">
@@ -1222,11 +1227,6 @@
         <span id="w_235" class="ocr_word" title="bbox 1456 1468 1698 1522" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συμβεβηκὸς</ins>
-          </span>
-        </span>
-        <span id="w_236" class="ocr_word" title="bbox 1727 1479 1853 1519" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μόνως</ins>
           </span>
         </span>
       </span>
@@ -1323,9 +1323,14 @@
             <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 918 1613 1119 1661" lang="grc">
+        <span id="w_255_0" class="ocr_word" title="bbox 918 1613 1119 1661">
           <span class="alternatives">
-            <ins title="nlp 2.00">δέδειχται,</ins>
+            <ins class="alt" title="nlp 2.00">δέδεικται,</ins>
+          </span>
+        </span>
+        <span id="w_255_1" class="ocr_word" title="bbox 918 1613 1119 1661">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1151 1627 1194 1650" lang="grc">
@@ -1346,11 +1351,6 @@
         <span id="w_259" class="ocr_word" title="bbox 1687 1618 1767 1645" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐστι</ins>
-          </span>
-        </span>
-        <span id="w_260" class="ocr_word" title="bbox 1788 1618 1854 1642" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">του</ins>
           </span>
         </span>
       </span>
@@ -1822,9 +1822,9 @@
             <ins class="alt" title="nlp 2.00">”Οντος</ins>
           </span>
         </span>
-        <span id="w_350_1" class="ocr_word" title="bbox 334 2402 501 2448">
+        <span id="w_350_1_0" class="ocr_word" title="bbox 334 2402 501 2448">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀναγχαίο.</ins>
+            <ins class="alt" title="nlp 2.00">ἀναγκαίου.</ins>
           </span>
         </span>
       </span>
