--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0313.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0313.html
@@ -1383,8 +1383,7 @@
         </span>
         <span id="w_255" class="ocr_word" title="bbox 1620 1280 1662 1312">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ai.</ins>
-            <del title="nlp 0.90">ai.</del>
+            <ins title="nlp 2.00">al.</ins>
           </span>
         </span>
       </span>
@@ -1423,16 +1422,11 @@
         </span>
         <span id="w_262" class="ocr_word" title="bbox 1801 1399 1879 1432" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνα-</ins>
+            <ins title="nlp 2.00">ἀναπτύξεις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 1078 1455 1880 1501">
-        <span id="w_263" class="ocr_word" title="bbox 1078 1465 1207 1492" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πτύξεις</ins>
-          </span>
-        </span>
         <span id="w_264" class="ocr_word" title="bbox 1250 1465 1309 1487" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰσὶ</ins>
