--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0272.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0272.html
@@ -112,9 +112,14 @@
             <ins class="alt" title="nlp 1.00">τῇ</ins>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1389 204 1484 230" lang="grc">
+        <span id="w_19_0" class="ocr_word" title="bbox 1389 204 1484 230">
           <span class="alternatives">
-            <ins title="nlp 2.00">χιόνι</ins>
+            <ins class="alt" title="nlp 2.00">κιόνι</ins>
+          </span>
+        </span>
+        <span id="w_19_1" class="ocr_word" title="bbox 1389 204 1484 230">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1514 190 1577 229" lang="grc">
@@ -135,11 +140,6 @@
         <span id="w_23" class="ocr_word" title="bbox 1870 205 1925 229" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_24" class="ocr_word" title="bbox 1959 205 2091 243" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἵματι</ins>
           </span>
         </span>
       </span>
@@ -445,7 +445,7 @@
         </span>
         <span id="w_82_0" class="ocr_word" title="bbox 1465 930 1539 988">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;αἱ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_82_1" class="ocr_word" title="bbox 1465 930 1539 988">
@@ -895,19 +895,19 @@
             <ins class="alt" title="nlp 2.00">20</ins>
           </span>
         </span>
-        <span id="w_166_1" class="ocr_word" title="bbox 359 2129 403 2160">
+        <span id="w_166_1_0" class="ocr_word" title="bbox 359 2129 403 2160">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἕχαστον</ins>
+            <ins class="alt" title="nlp 2.00">ἕκαστον</ins>
+          </span>
+        </span>
+        <span id="w_166_1_1" class="ocr_word" title="bbox 359 2129 403 2160">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_167_0" class="ocr_word" title="bbox 911 2117 1603 2171">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἐνυπάρχουσα</ins>
-          </span>
-        </span>
-        <span id="w_167_1" class="ocr_word" title="bbox 911 2117 1603 2171">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">μορφή.</ins>
           </span>
         </span>
       </span>
@@ -1296,9 +1296,14 @@
             <ins title="nlp 2.00">σηπ.</ins>
           </span>
         </span>
-        <span id="w_243" class="ocr_word" title="bbox 733 2831 810 2864">
+        <span id="w_243_0" class="ocr_word" title="bbox 733 2831 810 2864">
           <span class="alternatives">
-            <ins title="nlp 2.00">call.</ins>
+            <ins class="alt" title="nlp 2.00">coll.</ins>
+          </span>
+        </span>
+        <span id="w_243_1" class="ocr_word" title="bbox 733 2831 810 2864">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 837 2831 868 2864" lang="grc">
@@ -1352,12 +1357,6 @@
         <span id="w_253" class="ocr_word" title="bbox 2010 2829 2083 2863">
           <span class="alternatives">
             <ins title="nlp 2.00">οὐδὲ</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 2109 2827 2181 2862">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">HP:</ins>
-            <del title="nlp 0.90">HP:</del>
           </span>
         </span>
       </span>
